--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <ul id="menu-demo2">
               <li><a href="#"><img id="logoMenu" src="images/LogoMenu.png" alt="Logo Menu"></a>
                   <ul>
-                      <li><a href="index.html">Accueil</a></li>
-                      <li><a href="presentation.html">Explorer</a></li>
-                      <li><a href="archives.html">Mes flims</a></li>
-                      <li><a href="Galerie.html">Contact</a></li>
+                      <li><a href="contacter/contacter.html">Accueil</a></li>
+                      <li><a href="#">Explorer</a></li>
+                      <li><a href="#">Mes films</a></li>
+                      <li><a href="contacter/contacter.html">Contact</a></li>
                   </ul>
               </li>
           </ul>  
