--- a/gestionDuProfil/GestionDuProfil.html
+++ b/gestionDuProfil/GestionDuProfil.html
@@ -19,7 +19,7 @@
           <ul id="menu-demo2">
                 <li><a href="#"><img id="logoMenu" src="../images/LogoMenu.png" alt="Logo Menu"></a>
                     <ul>
-                        <li><a href="contacter/contacter.html">Accueil</a></li>
+                        <li><a href="../index.html">Accueil</a></li>
                         <li><a href="#">Explorer</a></li>
                         <li><a href="#">Mes films</a></li>
                         <li><a href="contacter/contacter.html">Contact</a></li>
@@ -51,7 +51,7 @@
               <div class="sous-header" id="header1">
     
                 <div class="utilisateur"> 
-                    <a href="GestionDuProfil/GestionDuProfil.html" target="_bank"><img class="image" src="../images/ProfilBlanc.png"></a>
+                    <a href="GestionDuProfil.html"><img class="image" src="../images/ProfilBlanc.png"></a>
                 </div>
             </div>
             </div>
@@ -180,7 +180,7 @@
     </div>
     
     <div class="sous-footer" id="footer3">
-        <p>Tecovid©</p>
+        <p>FlixNet©</p>
         <img class="petiteImages">
         <img class="petiteImages" src="../images/Point d'interrogation.png" alt="Logo point d'interrogation">
     </div>
