--- a/gestionDuProfil/GestionDuProfil.html
+++ b/gestionDuProfil/GestionDuProfil.html
@@ -144,8 +144,8 @@
 
                     </div>
 
-            <div>
-                <button>eflk</button>
+            <div id="sauvegarderGestionProfil">
+                <button class="boutons">Sauvegarder</button>
             </div>
 
 
