formulaire connexion, déconnexion, inscription php

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                       <li><a href="#">Explorer</a></li>
                       <li><a href="#">Mes films</a></li>
                       <li><a href="contacter/contacter.html">Contact</a></li>
+                      <li><a href="questions/deconnexion.php">Déconnexion</a></li>
                   </ul>
               </li>
           </ul>  
