--- a/gestionDuProfil/GestionDuProfil.html
+++ b/gestionDuProfil/GestionDuProfil.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion du Profil</title>
     <!-- <link rel="stylesheet" href="GestionDuProfil.css"> -->
-    <link rel="stylesheet" href="../main.css">
+    <link rel="stylesheet" href="../main2.css">
 
 </head>
 <body>
